# django-ninja-stock-api

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: django_ci.yml
.redis/: redis.conf
app/: api.py  logs.py  settings.py  urls.py
app/accounts/: admin.py  api.py  apps.py  backends.py  forms.py  middleware.py  models.py  schemas.py  signals.py
app/accounts/migrations/: 0001_initial.py  0002_rename_failed_login_attemps_user_failed_login_attempts.py
app/templates/: base.html
app/templates/accounts/admin/: base_stock.html  login.html  login_test.html  login_test2.html  test_tailwind.html
app/templates/static/css/: roboto-font.css
tests/: conftest.py  factories.py  utils.py
tests/accounts/: test_api_login.py  test_user.py
