[tool.poetry]
name = "django-ninja-stock-api"
version = "0.1.0"
description = "A simple stock management API built with Django Ninja."
authors = ["AlekysCoelho <alekyscoelho@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.6"
django-ninja = "^1.3.0"
psycopg = {extras = ["binary"], version = "^3.2.5"}
python-decouple = "^3.8"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.10.0"
pytest-cov = "^6.0.0"
factory-boy = "^3.3.3"
faker = "^36.1.1"
pytest-factoryboy = "^2.7.0"
ruff = "^0.9.7"
taskipy = "^1.14.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
DJANGO_SETTINGS_MODULE = "app.settings"
addopts = [
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--maxfail=5",
    "--disable-warnings",
]

[tool.coverage.run]
branch = true
source = ["app"]

omit = [
    "app/accounts/migrations/*",
    "app/*/__init__.py",
    "app/tests/*",
    "app/migrations/*",
    "app/accounts/forms.py",
    "app/asgi.py",
    "app/wsgi.py",
    "manage.py"
]

[tool.coverage.report]
show_missing = true
skip_covered = true
threshold = 80

[tool.coverage.html]
directory = "coverage_html_report"

[tool.ruff]
line-length = 120
exclude = ["app/**/migrations"]

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PL", "PT"]
ignore = ["PLR2004"]

[tool.ruff.format]
quote-style = 'double'

[tool.taskipy.tasks]
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."
run = "python3 manage.py runserver"
create_app = "python3 manage.py startapp"
pre_test = "task lint"
test = "pytest tests/ -s -x --cov=app -vv"
post_test = "coverage html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"